--- a/modd.conf
+++ b/modd.conf
@@ -1,8 +1,8 @@
-**/*.go !=**/*_test.go {
+**/*.go {
     prep: go test @dirmods
 }
 
-**/*.go !=**/*_test.go {
+**/*.go !**/*_test.go {
     prep: go build -o WEB-DEV-GO .
     daemon +sigterm: ./WEB-DEV-GO
 }
